--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <!-- <div id="show"></div> -->
 
     <!-- Import script -->
-    <script src="./scripts/products.js"></script>
+    <!-- <script src="./scripts/products.js"></script> -->
 </body>
 
 </html>
